--- a/tailwind/custom/components/components.css
+++ b/tailwind/custom/components/components.css
@@ -19,7 +19,7 @@
  */
 .page-title,
 .entry-title {
-	@apply max-w-content mx-auto mb-6 text-3xl font-extrabold text-neutral-900;
+	@apply mx-auto mb-6 text-3xl font-extrabold text-neutral-900;
 }
 
 /**
@@ -35,7 +35,7 @@
 .page-content > *,
 .entry-content > * {
 	/* Content width from the `theme.json` file */
-	@apply max-w-content mx-auto;
+	@apply mx-auto;
 }
 
 .entry-content > .alignwide {
@@ -53,4 +53,8 @@
 
 .entry-content > .alignright {
 	@apply float-right ml-8;
+}
+
+#content {
+	@apply py-10;
 }
