--- a/tailwind/custom/utilities.css
+++ b/tailwind/custom/utilities.css
@@ -6,3 +6,18 @@
  *
  * https://tailwindcss.com/docs/adding-custom-styles#adding-custom-utilities
  */
+
+ .pagination {
+	@apply flex justify-center gap-8 items-center;
+
+    .page-numbers {
+       @apply text-blue-500 hover:text-blue-700;
+       &.current {
+        @apply text-gray-700 py-1 px-2 rounded-sm bg-gray-200;
+        
+       }
+    }
+    
+}
+
+ 
