--- a/tailwind/custom/utilities.css
+++ b/tailwind/custom/utilities.css
@@ -20,4 +20,31 @@
     
 }
 
- 
+.has-background {
+	.prose {
+		@apply text-white;
+        h1 {
+            @apply text-white;
+        }
+        h2 {
+            @apply text-white;
+        }
+        
+	}
+} 
+.hero-block {
+	.text {
+		position: relative;
+		z-index: 1;
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: radial-gradient(circle, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 50%);
+            z-index: -1;
+        }
+	}
+}
